# cikada

./: .gitignore  Makefile.am  README  TODO  configure.ac
doc/: cikada-manual-en.tex  cikada-manual-en.tuc  cikada-manual-zh_CN.tex  cikada-manual-zh_CN.tuc  env-plain-en.tex  env-plain-zh_CN.tex  env-plain.tex
po/: Makevars  POTFILES  POTFILES.in  cikada.pot  zh_CN.gmo  zh_CN.po
src/: Makefile.am  cikada  cikada.c  ckd-magnifier.c  ckd-magnifier.h  ckd-meta-slides.c  ckd-meta-slides.h  ckd-page-fade.c  ckd-page-fade.h  ckd-page-manager.c  ckd-page-manager.h  ckd-page.c  ckd-page.h  ckd-player.c  ckd-player.h  ckd-progress.c  ckd-progress.h  ckd-ring.c  ckd-ring.h  ckd-script.c  ckd-script.h  ckd-slide-script.c  ckd-slide-script.h  ckd-slide.c  ckd-slide.h  ckd-slides-box.c  ckd-slides-box.h  ckd-slides.c  ckd-slides.h  ckd-view.c  ckd-view.h
src/.deps/: cikada-cikada.Po  cikada-ckd-magnifier.Po  cikada-ckd-meta-slides.Po  cikada-ckd-page-manager.Po  cikada-ckd-page.Po  cikada-ckd-player.Po  cikada-ckd-progress.Po  cikada-ckd-script.Po  cikada-ckd-slide-script.Po  cikada-ckd-slide.Po  cikada-ckd-slides-box.Po  cikada-ckd-slides.Po  cikada-ckd-view.Po
